@@ -1,5 +1,5 @@
 <?php
-//	Version: 0.6; Subs-PrettyUrls
+//	Version: 0.7; Subs-PrettyUrls
 
 if (!defined('SMF'))
 	die('Hacking attempt...');
@@ -9,63 +9,125 @@ function generatePrettyUrl($text)
 {
 	global $modSettings;
 
+	//	Do you know your ABCs?
 	$characterHash = array (
-		'a'	=>	array ('a', 'A', 'à', 'À', 'á', 'Á', 'â', 'Â', 'ã', 'Ã', 'ä', 'Ä', 'å', 'Å', 'ª', 'ą', 'Ą', 'а', 'А'),
+		'a'	=>	array ('a', 'A', 'à', 'À', 'á', 'Á', 'â', 'Â', 'ã', 'Ã', 'ä', 'Ä', 'å', 'Å', 'ª', 'ą', 'Ą', 'а', 'А', 'ạ', 'Ạ', 'ả', 'Ả', 'Ầ', 'ầ', 'Ấ', 'ấ', 'Ậ', 'ậ', 'Ẩ', 'ẩ', 'Ẫ', 'ẫ', 'Ă', 'ă', 'Ắ', 'ắ', 'Ẵ', 'ẵ', 'Ặ', 'ặ', 'Ằ', 'ằ', 'Ẳ', 'ẳ', 'あ', 'ア'),
 		'aa'	=>	array ('ا'),
 		'ae'	=>	array ('æ', 'Æ', 'ﻯ'),
 		'and'	=>	array ('&'),
 		'at'	=>	array ('@'),
 		'b'	=>	array ('b', 'B', 'б', 'Б', 'ب'),
-		'c'	=>	array ('c', 'C', 'ç', 'Ç', 'ć', 'Ć'),
+		'ba'	=>	array ('ば', 'バ'),
+		'be'	=>	array ('べ', 'ベ'),
+		'bi'	=>	array ('び', 'ビ'),
+		'bo'	=>	array ('ぼ', 'ボ'),
+		'bu'	=>	array ('ぶ', 'ブ'),
+		'c'	=>	array ('c', 'C', 'ç', 'Ç', 'ć', 'Ć', 'č', 'Č'),
 		'cent'	=>	array ('¢'),
 		'ch'	=>	array ('ч', 'Ч'),
+		'chi'	=>	array ('ち', 'チ'),
 		'copyright'	=>	array ('©'),
-		'd'	=>	array ('d', 'D', 'Ð', 'д', 'Д', 'د', 'ض'),
+		'd'	=>	array ('d', 'D', 'Ð', 'д', 'Д', 'د', 'ض', 'đ', 'Đ'),
+		'da'	=>	array ('だ', 'ダ'),
+		'de'	=>	array ('で', 'デ'),
 		'degrees'	=>	array ('°'),
 		'dh'	=>	array ('ذ'),
+		'do'	=>	array ('ど', 'ド'),
 		'dollar'	=>	array ('$'),
-		'e'	=>	array ('e', 'E', 'è', 'È', 'é', 'É', 'ê', 'Ê', 'ë', 'Ë', 'ę', 'Ę', 'е', 'Е', 'ё', 'Ё', 'э', 'Э'),
+		'e'	=>	array ('e', 'E', 'è', 'È', 'é', 'É', 'ê', 'Ê', 'ë', 'Ë', 'ę', 'Ę', 'е', 'Е', 'ё', 'Ё', 'э', 'Э', 'Ẹ', 'ẹ', 'Ẻ', 'ẻ', 'Ẽ', 'ẽ', 'Ề', 'ề', 'Ế', 'ế', 'Ệ', 'ệ', 'Ể', 'ể', 'Ễ', 'ễ', 'え', 'エ'),
 		'f'	=>	array ('f', 'F', 'ф', 'Ф', 'ﻑ'),
+		'fu'	=>	array ('ふ', 'フ'),
 		'g'	=>	array ('g', 'G', 'ğ', 'Ğ', 'г', 'Г'),
+		'ga'	=>	array ('が', 'ガ'),
+		'ge'	=>	array ('げ', 'ゲ'),
 		'gh'	=>	array ('غ'),
+		'gi'	=>	array ('ぎ', 'ギ'),
+		'go'	=>	array ('ご', 'ゴ'),
+		'gu'	=>	array ('ぐ', 'グ'),
 		'h'	=>	array ('h', 'H', 'ح', 'ه'),
+		'ha'	=>	array ('は', 'ハ'),
 		'half'	=>	array ('½'),
-		'i'	=>	array ('i', 'I', 'ì', 'Ì', 'í', 'Í', 'î', 'Î', 'ï', 'Ï', 'ı', 'İ', 'и', 'И'),
+		'he'	=>	array ('へ', 'ヘ'),
+		'hi'	=>	array ('ひ', 'ヒ'),
+		'ho'	=>	array ('ほ', 'ホ'),
+		'i'	=>	array ('i', 'I', 'ì', 'Ì', 'í', 'Í', 'î', 'Î', 'ï', 'Ï', 'ı', 'İ', 'и', 'И', 'Ị', 'ị', 'Ỉ', 'ỉ', 'Ĩ', 'ĩ', 'い', 'イ'),
 		'j'	=>	array ('j', 'J', 'ج'),
+		'ji'	=>	array ('じ', 'ぢ', 'ジ', 'ヂ'),
 		'k'	=>	array ('k', 'K', 'к', 'К', 'ك'),
+		'ka'	=>	array ('か', 'カ'),
+		'ke'	=>	array ('け', 'ケ'),
 		'kh'	=>	array ('х', 'Х', 'خ'),
+		'ki'	=>	array ('き', 'キ'),
+		'ko'	=>	array ('こ', 'コ'),
+		'ku'	=>	array ('く', 'ク'),
 		'l'	=>	array ('l', 'L', 'ł', 'Ł', 'л', 'Л', 'ل'),
 		'la'	=>	array ('ﻻ'),
 		'm'	=>	array ('m', 'M', 'м', 'М', 'م'),
-		'n'	=>	array ('n', 'N', 'ñ', 'Ñ', 'ń', 'Ń', 'н', 'Н', 'ن'),
-		'o'	=>	array ('o', 'O', 'ò', 'Ò', 'ó', 'Ó', 'ô', 'Ô', 'õ', 'Õ', 'ö', 'Ö', 'ø', 'Ø', 'º', 'о', 'О'),
+		'ma'	=>	array ('ま', 'マ'),
+		'me'	=>	array ('め', 'メ'),
+		'mi'	=>	array ('み', 'ミ'),
+		'mo'	=>	array ('も', 'モ'),
+		'mu'	=>	array ('む', 'ム'),
+		'n'	=>	array ('n', 'N', 'ñ', 'Ñ', 'ń', 'Ń', 'н', 'Н', 'ن', 'ん', 'ン'),
+		'na'	=>	array ('な', 'ナ'),
+		'ne'	=>	array ('ね', 'ネ'),
+		'ni'	=>	array ('に', 'ニ'),
+		'no'	=>	array ('の', 'ノ'),
+		'nu'	=>	array ('ぬ', 'ヌ'),
+		'o'	=>	array ('o', 'O', 'ò', 'Ò', 'ó', 'Ó', 'ô', 'Ô', 'õ', 'Õ', 'ö', 'Ö', 'ø', 'Ø', 'º', 'о', 'О', 'Ọ', 'ọ', 'Ỏ', 'ỏ', 'Ộ', 'ộ', 'Ố', 'ố', 'Ỗ', 'ỗ', 'Ồ', 'ồ', 'Ổ', 'ổ', 'Ơ', 'ơ', 'Ờ', 'ờ', 'Ớ', 'ớ', 'Ợ', 'ợ', 'Ở', 'ở', 'Ỡ', 'ỡ', 'お', 'オ'),
 		'p'	=>	array ('p', 'P', 'п', 'П'),
+		'pa'	=>	array ('ぱ', 'パ'),
+		'pe'	=>	array ('ぺ', 'ペ'),
 		'percent'	=>	array ('%'),
+		'pi'	=>	array ('ぴ', 'ピ'),
 		'plus'	=>	array ('+'),
 		'plusminus'	=>	array ('±'),
+		'po'	=>	array ('ぽ', 'ポ'),
 		'pound'	=>	array ('£'),
+		'pu'	=>	array ('ぷ', 'プ'),
 		'q'	=>	array ('q', 'Q', 'ق'),
 		'quarter'	=>	array ('¼'),
 		'r'	=>	array ('r', 'R', '®', 'р', 'Р', 'ر'),
-		's'	=>	array ('s', 'S', 'ş', 'Ş', 'ś', 'Ś', 'с', 'С', 'س', 'ص'),
+		'ra'	=>	array ('ら', 'ラ'),
+		're'	=>	array ('れ', 'レ'),
+		'ri'	=>	array ('り', 'リ'),
+		'ro'	=>	array ('ろ', 'ロ'),
+		'ru'	=>	array ('る', 'ル'),
+		's'	=>	array ('s', 'S', 'ş', 'Ş', 'ś', 'Ś', 'с', 'С', 'س', 'ص', 'š', 'Š'),
+		'sa'	=>	array ('さ', 'サ'),
+		'se'	=>	array ('せ', 'セ'),
 		'section'	=>	array ('§'),
 		'sh'	=>	array ('ш', 'Ш', 'ش'),
+		'shi'	=>	array ('し', 'シ'),
 		'shch'	=>	array ('щ', 'Щ'),
+		'so'	=>	array ('そ', 'ソ'),
 		'ss'	=>	array ('ß'),
+		'su'	=>	array ('す', 'ス'),
 		't'	=>	array ('t', 'T', 'т', 'Т', 'ت', 'ط'),
+		'ta'	=>	array ('た', 'タ'),
+		'te'	=>	array ('て', 'テ'),
 		'th'	=>	array ('ث'),
 		'three-quarters'	=>	array ('¾'),
+		'to'	=>	array ('と', 'ト'),
 		'ts'	=>	array ('ц', 'Ц'),
-		'u'	=>	array ('u', 'U', 'ù', 'Ù', 'ú', 'Ú', 'û', 'Û', 'ü', 'Ü', 'µ', 'у', 'У'),
+		'tsu'	=>	array ('つ', 'ツ'),
+		'u'	=>	array ('u', 'U', 'ù', 'Ù', 'ú', 'Ú', 'û', 'Û', 'ü', 'Ü', 'µ', 'у', 'У', 'Ụ', 'ụ', 'Ủ', 'ủ', 'Ũ', 'ũ', 'Ư', 'ư', 'Ừ', 'ừ', 'Ứ', 'ứ', 'Ự', 'ự', 'Ử', 'ử', 'Ữ', 'ữ', 'う', 'ウ'),
 		'v'	=>	array ('v', 'V', 'в', 'В'),
 		'w'	=>	array ('w', 'W', 'و'),
+		'wa'	=>	array ('わ', 'ワ'),
+		'wo'	=>	array ('を', 'ヲ'),
 		'x'	=>	array ('x', 'X', '×'),
-		'y'	=>	array ('y', 'Y', 'ý', 'Ý', 'ÿ', 'й', 'Й', 'ы', 'Ы', 'ي'),
-		'ya'	=>	array ('я', 'Я'),
+		'y'	=>	array ('y', 'Y', 'ý', 'Ý', 'ÿ', 'й', 'Й', 'ы', 'Ы', 'ي', 'Ỳ', 'ỳ', 'Ỵ', 'ỵ', 'Ỷ', 'ỷ', 'Ỹ', 'ỹ'),
+		'ya'	=>	array ('я', 'Я', 'や'),
 		'yen'	=>	array ('¥'),
-		'yu'	=>	array ('ю', 'Ю'),
-		'z'	=>	array ('z', 'Z', 'ż', 'Ż', 'ź', 'Ź', 'з', 'З', 'ز', 'ظ'),
+		'yo'	=>	array ('よ'),
+		'yu'	=>	array ('ю', 'Ю', 'ゆ'),
+		'z'	=>	array ('z', 'Z', 'ż', 'Ż', 'ź', 'Ź', 'з', 'З', 'ز', 'ظ', 'ž', 'Ž'),
+		'za'	=>	array ('ざ', 'ザ'),
+		'ze'	=>	array ('ぜ', 'ゼ'),
 		'zh'	=>	array ('ж', 'Ж'),
+		'zo'	=>	array ('ぞ', 'ゾ'),
+		'zu'	=>	array ('ず', 'づ', 'ズ', 'ヅ'),
 		'-'	=>	array ('-', ' ', '.', ','),
 		'_'	=>	array ('_'),
 		'!'	=>	array ('!'),
@@ -209,7 +271,7 @@ RewriteEngine on';
 ' . $rule['rule'];
 
 	//	Fix the Root URL
-	if (preg_match('~' . $boardurl . '/?(.*)?~', $modSettings['pretty_root_url'], $match))
+	if (preg_match('~' . $boardurl . '/(.*)~', $modSettings['pretty_root_url'], $match))
 		$htaccess = str_replace('ROOTURL', $match[1] . '/', $htaccess);
 	else
 		$htaccess = str_replace('ROOTURL', '', $htaccess);
