@@ -1,0 +1,57 @@
+<?xml version="1.0"?>
+<!DOCTYPE modification SYSTEM "http://www.simplemachines.org/xml/modification">
+
+<modification xmlns="http://www.simplemachines.org/xml/modification" xmlns:smf="http://www.simplemachines.org/">
+	<id>el:prettyurls-profiles-ext-none</id>
+	<version>0.7</version>
+
+	<file name="$sourcedir/PrettyUrls-Filters.php">
+		<operation>
+			<search position="end"></search>
+			<add><![CDATA[
+//	Filter profiles
+function pretty_profiles_filter($urls)
+{
+	global $scripturl, $boardurl, $modSettings, $db_prefix;
+
+	$pattern = '~' . $scripturl . '(.*)action=profile;u=([0-9]+)(.*)~S';
+	$query_data = array();
+	foreach ($urls as $crc => $url)
+	{
+		//	Get the profile data ready to query the database with
+		if (!isset($url['replacement']))
+			if (preg_match($pattern, $url['url'], $matches))
+			{
+				$urls[$crc]['profile_id'] = (int) $matches[2];
+				$urls[$crc]['match1'] = $matches[1];
+				$urls[$crc]['match3'] = $matches[3];
+				$query_data[] = $urls[$crc]['profile_id'];
+			}
+	}
+
+	//	Query the database with these profile IDs
+	if (count($query_data) != 0)
+	{
+		$memberNames = array();
+		$query = db_query("
+			SELECT ID_MEMBER, memberName
+			FROM {$db_prefix}members
+			WHERE ID_MEMBER IN (" . implode(', ', $querty_data) . ")", __FILE__, __LINE__);
+		while ($row = mysql_fetch_assoc($query))
+			$memberNames[$row['ID_MEMBER']] = rawurlencode($row['memberName']);
+		mysql_free_result($query);
+
+		//	Build the replacement URLs
+		foreach ($urls as $crc => $url)
+		{
+			if (isset($url['profile_id']))
+				$urls[$crc]['replacement'] = $boardurl . '/profile/' . $memberNames[$url['profile_id']] . '/' . $url['match1'] . $url['match3'];
+		}
+	}
+	return $urls;
+}
+]]></add>
+		</operation>
+	</file>
+
+</modification>
